Añadida la dependencia lombok para reducir código.