@@ -5,9 +5,8 @@ import com.todolist.entity.Task;
 import com.todolist.entity.User;
 import com.todolist.entity.github.Repo;
 import com.todolist.entity.github.TaskGitHub;
-import com.todolist.repository.Repositories;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
+import com.todolist.services.UserService;
+import lombok.AllArgsConstructor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
@@ -17,22 +16,20 @@ import javax.validation.Valid;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/github")
 @Validated
+@AllArgsConstructor
 public class RepoController {
 
-    @Autowired
-    @Qualifier("repositories")
-    private Repositories repositories;
+    private UserService userService;
 
     @GetMapping("repos/{idUser}")
     public List<Map<String, Object>> getAllRepos(
             @PathVariable long idUser,
             @RequestParam(defaultValue = "idTask,title,description,status,finishedDate,startDate,annotation,priority,difficulty,duration") String fields) {
-        User user = repositories.findUserById(idUser);
+        User user = userService.findUserById(idUser);
         if (user == null)
             throw new IllegalArgumentException("User not found");
         String uri = "https://api.github.com/users/" + user.getUsername() + "/repos";
@@ -45,19 +42,8 @@ public class RepoController {
         } else {
             repos = restTemplate.getForObject(uri, TaskGitHub[].class);
         }
-        return Arrays.asList(repos).stream().map(repo -> {
-            Task task = new Task();
-            task.setTitle(repo.getName());
-            task.setDescription(repo.getDescription());
-            task.setStatus(null);
-            task.setFinishedDate(null);
-            task.setStartDate(repo.getCreatedAt().split("T")[0]);
-            task.setPriority(null);
-            task.setAnnotation(null);
-            task.setDifficulty(null);
-            task.setIdTask(-1);
-            return new ShowTask(task).getFields(fields);
-        }).collect(Collectors.toList());
+        return Arrays.stream(repos).map(repo -> new ShowTask(Task.of(repo.getName(), repo.getDescription(), null, null, null, repo.getCreatedAt().split("T")[0], null, null)).getFields(fields)
+        ).toList();
     }
 
     @GetMapping("user/{idUser}/repo/{repoName}")
@@ -65,7 +51,7 @@ public class RepoController {
             @PathVariable long idUser,
             @PathVariable String repoName,
             @RequestParam(defaultValue = "idTask,title,description,status,finishedDate,startDate,annotation,priority,difficulty,duration") String fields) {
-        User user = repositories.findUserById(idUser);
+        User user = userService.findUserById(idUser);
         if (user == null)
             throw new IllegalArgumentException("User not found");
         String uri = "https://api.github.com/users/" + user.getUsername() + "/repos/" + repoName;
@@ -78,16 +64,7 @@ public class RepoController {
         } else {
             repo = restTemplate.getForObject(uri, TaskGitHub.class);
         }
-        Task task = new Task();
-        task.setTitle(repo.getName());
-        task.setDescription(repo.getDescription());
-        task.setStatus(null);
-        task.setFinishedDate(null);
-        task.setStartDate(repo.getCreatedAt().split("T")[0]);
-        task.setPriority(null);
-        task.setAnnotation(null);
-        task.setDifficulty(null);
-        task.setIdTask(-1);
+        Task task = Task.of(repo.getName(), repo.getDescription(), null, null, null, repo.getCreatedAt().split("T")[0], null, null);
         return new ShowTask(task).getFields(fields);
     }
 
@@ -96,9 +73,7 @@ public class RepoController {
             @RequestBody @Valid Repo createRepo,
             @PathVariable long idUser,
             @RequestParam(defaultValue = "idTask,title,description,status,finishedDate,startDate,annotation,priority,difficulty,duration") String fields) {
-        if (createRepo.getName() == null)
-            throw new IllegalArgumentException("Name is required");
-        User user = repositories.findUserById(idUser);
+        User user = userService.findUserById(idUser);
         if (user == null)
             throw new IllegalArgumentException("User not found");
         String uri = "https://api.github.com/user/repos";
@@ -119,14 +94,11 @@ public class RepoController {
             @PathVariable long idUser,
             @PathVariable String repoName,
             @RequestParam(defaultValue = "idTask,title,description,status,finishedDate,startDate,annotation,priority,difficulty,duration") String fields) {
-        if (updateRepo.getName() == null)
-            throw new IllegalArgumentException("Name is required");
-        User user = repositories.findUserById(idUser);
+        User user = userService.findUserById(idUser);
         if (user == null)
             throw new IllegalArgumentException("User not found");
         String uri = "https://api.github.com/repos" + user.getUsername() + "/" + repoName;
         RestTemplate restTemplate = new RestTemplate();
-        TaskGitHub repo;
         if (user.getToken() != null) {
             HttpHeaders headers = new HttpHeaders();
             headers.set("Authorization", "Bearer " + user.getToken());
@@ -141,7 +113,7 @@ public class RepoController {
     public void deleteRepo(
             @PathVariable long idUser,
             @PathVariable String repoName) {
-        User user = repositories.findUserById(idUser);
+        User user = userService.findUserById(idUser);
         if (user == null)
             throw new IllegalArgumentException("User not found");
         String uri = "https://api.github.com/repos" + user.getUsername() + "/" + repoName;
